<?xml version="1.0"?>
<package>
  <name>rviz_path_planner</name>
  <version>0.1.0</version>
  <description>A rviz path planning tool with interactive markers</description>

  <maintainer email="tonirosinol@hotmail.com">ToniRV</maintainer>

  <license>BSD</license>

  <author>Toni Rosinol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>waypoint_navigator</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>waypoint_navigator</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
