<?xml version="1.0"?>
<package>
  <name>rviz_waypoint_navigator</name>
  <version>0.1.0</version>
  <description>Rviz plugin using interactive markers for a click-and-drag user-friendly graphical interface with waypoint_navigator and mav_trajectory_optimization. It allows to specify waypoints in Rviz which the drone has to visit, while calculating a trajectory through these and eventually sending commands to the drone.</description>

  <maintainer email="tonirosinol@mit.edu">Toni Rosinol</maintainer>

  <license>BSD</license>

  <author>Toni Rosinol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>waypoint_navigator</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>waypoint_navigator</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
